# gapi/rpc_verify_email.go
@@ -1,0 +1,28 @@
+package gapi
+
+import (
+	"context"
+
+	db "example.com/simplebank/db/sqlc"
+	"example.com/simplebank/pb"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) VerifyEmail(ctx context.Context, req *pb.VerifyEmailRequest) (*pb.VerifyEmailResponse, error) {
+
+	txResult, err := server.store.VerifyEmailTx(ctx, db.VerifyEmailTxParams{
+		EmailId:    req.GetEmailId(),
+		SecretCode: req.GetSecretCode(),
+	})
+
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to verify email %s", err)
+	}
+
+	rsp := &pb.VerifyEmailResponse{
+		IsVerified: txResult.User.IsEmailVerified,
+	}
+
+	return rsp, nil
+}
